# FUSION-Code

./: README.md  pyproject.toml
docs/: data.md  evaluation.md
fusion/: __init__.py  constants.py  conversation.py  mm_utils.py  utils.py
fusion/eval/: eval_cvbench_qa.py  eval_mmvp_qa.py  eval_science_qa.py  eval_textvqa.py  m4c_evaluator.py  model_qa.py  model_vqa.py  model_vqa_cvbench.py  model_vqa_loader.py  model_vqa_mmbench.py  model_vqa_mmvp.py  model_vqa_science.py  run_fusion.py
fusion/model/: __init__.py  builder.py  fusion_arch.py  vision_sampler.py
fusion/model/language_model/: fusion_llama.py  fusion_mistral.py  fusion_mpt.py  fusion_phi.py  fusion_qwen.py
fusion/model/multimodal_encoder/: builder.py  clip_encoder.py  siglip2_encoder.py  siglip_encoder.py
fusion/model/multimodal_projector/: builder.py
fusion/train/: fusion_trainer.py  llama_xformers_attn_monkey_patch.py  train.py  train_mem.py  train_xformers.py
scripts/: convert_vizwiz_for_submission.py  convert_vqav2_for_submission.py
scripts/eval/: cvbench.sh  mmbench_cn_test.sh  mmbench_test.sh  mme.sh  mmmu_val.sh  mmvet.sh  mmvp.sh  pope.sh  sqa.sh  textvqa.sh  vizwiz.sh
scripts/lmms-eval/: fusion_llama.py  fusion_phi.py
scripts/train/: fusion-x_3b_stage1.5.sh  fusion-x_3b_stage1.sh  fusion-x_3b_stage2.sh  fusion-x_8b_stage1.5.sh  fusion-x_8b_stage1.sh  fusion-x_8b_stage2.sh  fusion_3b_stage1.5.sh  fusion_3b_stage1.sh  fusion_3b_stage2.sh  fusion_8b_stage1.5.sh  fusion_8b_stage1.sh  fusion_8b_stage2.sh
scripts/train/yaml/: stage1.5.yaml  stage1.yaml  stage2.yaml
